unpackaged/objects/sfsiPoll__Poll_Option__c.object
<CustomObject>
    <description>Define the options available for each poll.</description>
    <fields>
        <fullName>sfsiPoll__Order__c</fullName>
        <inlineHelpText>Order in which the poll options are displayed on the UI.</inlineHelpText>
        <label>Order</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfsiPoll__Poll_Question__c</fullName>
        <label>Poll Question</label>
        <referenceTo>sfsiPoll__Poll_Question__c</referenceTo>
        <relationshipLabel>Poll Options</relationshipLabel>
        <relationshipName>Poll_Options</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfsiPoll__Response_Count__c</fullName>
        <label>Response Count</label>
        <summaryForeignKey>sfsiPoll__Poll_Response__c.sfsiPoll__Poll_Option__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sfsiPoll__Response_Ratio__c</fullName>
        <formula>IF(sfsiPoll__Poll_Question__r.sfsiPoll__Total_Responses__c &gt; 0, sfsiPoll__Response_Count__c / sfsiPoll__Poll_Question__r.sfsiPoll__Total_Responses__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Poll Option</label>
    <nameField>
        <label>Poll Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Poll Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>